# LetsC

./: .gitignore  CMakeLists.txt  library.cpp  library.h
clientc/: CMakeLists.txt  main.c
src/: logger.cpp  logger.h  sqlite.cpp  sqlite.h
src/interface/: idb.h  ilogger.h
